<resources>
    <string name="app_name">iTime</string>
    <string name="action_settings">Settings</string>
    <string name="title">主题</string>
    <string name="description">备注</string>
    <string name="hint_description">想说的话，目标，格言...</string>
    <string name="hint_title">生日，纪念日，节日，考试...</string>
    <string name="cycle">周期</string>
    <string name="input_cycle">输入周期（天）</string>
    <string name="sure">确认</string>
    <string name="quit">取消</string>
    <string name="add_label">添加新标签</string>
    <string name="label_add">添加标签</string>
    <string name="label_editText_add">10个字符以内</string>
    <string name="after">天之后</string>
    <string name="before">天之前</string>
    <string name="choose">选取</string>
    <string name="SignIn">登陆</string>
    <string name="ChatLogin">微信登陆</string>
    <string name="backgroundcolor">背景颜色</string>
    <string name="label">标签</string>
    <string name="ChooseColor">选择颜色</string>
</resources>
