<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayout_label"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        tools:ignore="MissingConstraints,UselessLeaf"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:padding="5dp"
        >


    </LinearLayout>

    <Button
        android:id="@+id/button_addLabel"
        android:layout_width="137dp"
        android:layout_height="58dp"
        android:layout_below="@+id/LinearLayout_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="23dp"
        android:background="@color/White"
        android:text="@string/add_label" />

    <Button
        android:id="@+id/button_label_quit"
        android:layout_width="72dp"
        android:layout_height="58dp"
        android:layout_below="@+id/LinearLayout_label"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_toStartOf="@+id/button_label_ok"
        android:layout_toLeftOf="@+id/button_label_ok"
        android:background="@color/White"
        android:text="@string/quit" />

    <Button
        android:id="@+id/button_label_ok"
        android:layout_width="72dp"
        android:layout_height="58dp"
        android:layout_below="@+id/LinearLayout_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:background="@color/White"
        android:text="@string/sure" />

</RelativeLayout>