<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout_add"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@color/myColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UselessLeaf">

        <ImageButton
            android:id="@+id/button_cancel"
            android:layout_width="65dp"
            android:layout_height="67dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/btn_circle"
            android:src="@mipmap/ic_launcher_return"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_label_ok"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/button_label_ok"
            android:layout_width="65dp"
            android:layout_height="67dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/btn_circle"
            android:src="@mipmap/ic_launcher_ok1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="77dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="191dp"
            android:layout_toEndOf="@+id/button_cancel"
            android:layout_toRightOf="@+id/button_cancel"
            android:text="@string/title"
            android:textColor="@color/White"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="77dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="81dp"
            android:layout_marginLeft="81dp"
            android:layout_marginBottom="77dp"
            android:text="@string/description"
            android:textColor="@color/White"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="129dp"
            android:ems="10"
            android:hint="@string/hint_title"
            android:inputType="textPersonName"
            android:textColor="@color/White"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:hint="@string/hint_description"
            android:inputType="textPersonName"
            android:textColor="@color/White"
            tools:ignore="Autofill" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listView_chooce"
        android:layout_width="0dp"
        android:layout_height="476dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_add"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>